[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SophusGUI"
version = "0.0.1"
authors = [
  { name="Ahmed Alfadhel", email="ahmedalfadhel.22@gmail.com" },
]
description = "A GUI library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]